--- a/include/views/default/cockpit2/frontend/pexcard/pexcard-pex-id.phtml
+++ b/include/views/default/cockpit2/frontend/pexcard/pexcard-pex-id.phtml
@@ -2,7 +2,7 @@
 
 <div class="content-padding">
 
-	<h1 class="title"><i class="fa fa-credit-card"></i>Pex Card</h1>
+	<h1 class="title"><i class="fa fa-credit-card"></i>Pex Card: Assign Pex Card to Driver</h1>
 
 		<div class="divider"></div>
 
