--- a/include/views/default/cockpit2/frontend/listview/listview-orders.phtml
+++ b/include/views/default/cockpit2/frontend/listview/listview-orders.phtml
@@ -9,7 +9,7 @@
 			<th>Order</th>
 			<th>Status</th>
 		</tr>
-		<tr ng-repeat="order in orders" ng-attr-tabindex="{{$index+1}}" tab-select="/order/{{order.id_order}}">
+		<tr ng-repeat="order in orders track by $index" ng-attr-tabindex="{{$index+1}}" tab-select="/order/{{order.id_order}}">
 			<td><a href="/order/{{order.id_order}}">{{order.id_order}}</td>
 			<td>{{order.date | localtime | timestamp | date:'MM/dd @ HH:mm'}}</td>
 			<td>
