--- a/include/views/default/cockpit2/frontend/listview/listview-staff.phtml
+++ b/include/views/default/cockpit2/frontend/listview/listview-staff.phtml
@@ -9,7 +9,7 @@
 			<th class="tb-center">Working</th>
 			<th> </th>
 		</tr>
-		<tr ng-repeat="s in staff" ng-attr-tabindex="{{$index+4}}" tab-select="/staff/{{s.login}}">
+		<tr ng-repeat="s in staff track by $index" ng-attr-tabindex="{{$index+4}}" tab-select="/staff/{{s.login}}">
 			<td><a href="/staff/{{s.login}}">{{s.name}}</a></td>
 			<td><a href ng-click="callText(s.phone)">{{s.phone | formatPhone}}</a></td>
 			<td>{{s.login}}</td>
