completly changed how all data is posted to server n stuff
- removed old form encoding formatting
- added decoding into cana rest class
- added inline partial for google maps info boxes
- upgraded angular js
- upgraded angular upload lib
- updated driver documents page for new lib
- did NOT upgrade driver onboarding page

--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -3447,3 +3447,7 @@ input[type="checkbox"].switch + div:before {
 	0% {background-position: -10000px bottom;}
 	100% {background-position: left bottom;}
 }
+
+.map-info-box {
+	font-size: .8em;
+}
