--- a/include/views/default/cockpit2/frontend/drivers/drivers-docs-form.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-docs-form.phtml
@@ -39,7 +39,10 @@
 				</td>
 				<td class="td-download">
 					<!-- upload directive -->
-					<div class="upbutton"><div driver-docs-upload="{{doc.id_driver_document}}"></div></div>
+					<div class="upbutton" driver-docs-upload>					
+						<button class="ladda-button upload" data-color="mint" data-style="zoom-in"><span class="ladda-label"><b>UPLOAD</b></span></button>
+						<input ng-if="init" type="file" nv-file-select="" uploader="uploader" name="file" class="file file-hidden" options="{ formData: [{id_driver_document: doc.id_driver_document}]}">
+					</div>					
 				</td>
 			</tr>
 		</table>
