--- a/include/views/default/cockpit2/bundle/js.phtml
+++ b/include/views/default/cockpit2/bundle/js.phtml
@@ -25,6 +25,7 @@
 <script src="/assets/cockpit/js/socket.min.js"></script>
 <script src="/assets/cockpit/js/angular-hotkeys.min.js"></script>
 <script src="/assets/cockpit/js/angular-google-maps.min.js"></script>
+<script src="/assets/cockpit/js/favico.min.js"></script>
 
 <script src="/assets/js/snap.js"></script>
 <script src="/assets/js/date.js"></script>
@@ -99,3 +100,4 @@
 <script src="/assets/cockpit/js/service.view.list.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/service.maps.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/service.pexcard.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/cockpit/js/service.favico.js?v=<?=Cana_Util::gitVersion()?>"></script>
