--- a/include/views/default/cockpit2/frontend/drivers/drivers-docs-form.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-docs-form.phtml
@@ -39,10 +39,10 @@
 				</td>
 				<td class="td-download">
 					<!-- upload directive -->
-					<div class="upbutton" driver-docs-upload>					
+					<div class="upbutton" driver-docs-upload>
 						<button class="ladda-button upload" data-color="mint" data-style="zoom-in"><span class="ladda-label"><b>UPLOAD</b></span></button>
 						<input ng-if="init" type="file" nv-file-select="" uploader="uploader" name="file" class="file file-hidden" options="{ formData: [{id_driver_document: doc.id_driver_document}]}">
-					</div>					
+					</div>
 				</td>
 			</tr>
 		</table>
@@ -75,10 +75,8 @@
 			To complete your onboarding, please enter your <a href="/drivers/docs/payment">payment information</a>.
 		</h2>
 
-		<div ng-if="pexcard">
-
+		<div>
 			<div class="divider"></div><br/><br/>
-
 			<h1 class="title" ><i class="fa fa-credit-card"></i><span>Pex Card</span></h1>
 			<h2 class="title driver-docs-text">
 				<a href="/drivers/docs/pexcard">Activate your Pex Card</a>.
