added tickets and calls view

--- a/include/views/default/cockpit2/bundle/js.phtml
+++ b/include/views/default/cockpit2/bundle/js.phtml
@@ -57,6 +57,8 @@
 <script src="/assets/cockpit/js/controllers.customer.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.maps.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.support.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/cockpit/js/controllers.ticket.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/cockpit/js/controllers.call.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.deploy.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.order.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.config.js?v=<?=Cana_Util::gitVersion()?>"></script>
@@ -89,6 +91,8 @@
 <script src="/assets/cockpit/js/service.location.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/service.customer.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/service.support.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/cockpit/js/service.ticket.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/cockpit/js/service.call.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/service.heartbeat.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/service.push.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/service.notification.js?v=<?=Cana_Util::gitVersion()?>"></script>
