--- a/include/views/default/cockpit2/frontend/calls/calls.phtml
+++ b/include/views/default/cockpit2/frontend/calls/calls.phtml
@@ -1,7 +1,7 @@
 <div class="top-pad"></div>
 
 <div class="content-padding">
-	<h1 class="title"><i class="fa fa-bookmark"></i>Tickets<div class="title-loader" ng-if="loading"><i class="fa fa-refresh fa-spin"></i></div></h1>
+	<h1 class="title"><i class="fa fa-bookmark"></i>Calls<div class="title-loader" ng-if="loading"><i class="fa fa-refresh fa-spin"></i></div></h1>
 
 	<div class="box-content2 box-content-table">
 		<table>
@@ -13,6 +13,6 @@
 
 	<div class="bar-loader bar-loader-search" ng-class="{'bar-loader-loading': loading}"></div>
 
-	<ng-include src="'assets/view/listview-tickets.html'"></ng-include>
+	<ng-include src="'assets/view/listview-calls.html'"></ng-include>
 	<ng-include src="'assets/view/listview-paging.html'"></ng-include>
 </div>
