--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -3451,3 +3451,9 @@ input[type="checkbox"].switch + div:before {
 .map-info-box {
 	font-size: .8em;
 }
+
+.tb-extras {
+	margin-top: -.8em;
+	margin-bottom: 2em;
+	font-size: 1.2em;
+}
