--- a/include/views/default/cockpit2/frontend/deploy/deploy-home.phtml
+++ b/include/views/default/cockpit2/frontend/deploy/deploy-home.phtml
@@ -3,6 +3,7 @@
 <div class="content-padding">
 
 	<h1 class="title"><i class="fa fa-database"></i>Environments</h1>
+	<div class="bar-loader bar-loader-title" ng-class="{'bar-loader-loading': loadingServers}"></div>
 	<div class="box-content2 box-content-table">
 		<table class="tb-zebra">
 			<tr>
@@ -19,7 +20,9 @@
 	</div>
 
 
+
 	<h1 class="title"><i class="fa fa-bookmark"></i>Versions</h1>
+	<div class="bar-loader bar-loader-title" ng-class="{'bar-loader-loading': loadingVersions}"></div>
 	<div class="box-content2 box-content-table">
 		<table class="tb-zebra">
 			<tr>
