--- a/include/views/default/cockpit2/frontend/orders/orders-order.phtml
+++ b/include/views/default/cockpit2/frontend/orders/orders-order.phtml
@@ -3,13 +3,16 @@
 <div class="content-padding">
 
 
-	<h1 class="left title"><i class="fa fa-car"></i>Order Details<div class="title-loader" ng-if="loading"><i class="fa fa-refresh fa-spin"></i></div></h1>
+	<h1 class="left title"><i class="fa fa-car"></i>Order Details</h1>
 
 	<div class="ticket-status-top">
 		<div class="ticket-status-open">{{order.status.status}}</div>
 	</div>
 
 	<div class="divider"></div>
+	
+	<div class="bar-loader bar-loader-search" ng-class="{'bar-loader-loading': loading}"></div>
+	
 	<br>
 
 	<div>
