--- a/include/views/default/cockpit2/frontend/tickets/tickets-ticket.phtml
+++ b/include/views/default/cockpit2/frontend/tickets/tickets-ticket.phtml
@@ -8,8 +8,10 @@
 		<div class="ticket-status-open" ng-if="ticket.status=='open'">Open</div>
 		<div class="ticket-status-closed" ng-if="ticket.status=='closed'">Closed</div>
 	</div>
-
+	
 	<div class="divider"></div>
+
+	<div class="bar-loader bar-loader-search" ng-class="{'bar-loader-loading': loading}"></div>
 	
 	<div>
 		
@@ -98,8 +100,7 @@
 				</div>
 			</div>
 	
-	
-			
+
 		</div>
 			
 		<div class="support-boxes-column">
@@ -151,7 +152,7 @@
 			</div>
 	
 			
-			<div class="support-box-wrap" ng-if="ticket.type != 'WARNING'">
+			<div class="support-box-wrap" ng-if="ticket.id_support && ticket.type != 'WARNING'">
 				<h1>Resolution <a href ng-click="triggerViewTicket(ticket.id_support)"><i class="fa fa-comment-o"></i></a></h1>
 				<div class="box-content-color">
 					<div ng-if="ticket.order.id_order">
