--- a/include/views/default/cockpit2/frontend/restaurants/restaurants-restaurant.phtml
+++ b/include/views/default/cockpit2/frontend/restaurants/restaurants-restaurant.phtml
@@ -33,7 +33,7 @@
 						</div>
 						<div class="field-row">
 							<div class="field-key">Delivery by</div>
-							<div class="field-value">@todo</div>
+							<div class="field-value">{{restaurant.delivery_service ? 'Crunchbutton' : 'Restaurant'}}</div>
 						</div>
 						<div class="field-row">
 							<div class="field-key">Relationship</div>
